add swagger anotation for API
