# server/internal/handler/command/get_command.go
@@ -5,6 +5,14 @@ import (
 	"net/http"
 )
 
+// GetCommandById @Summary Start command
+// @Description get and start command by id
+// @Tags command
+// @Produce json
+// @Param        id   path      int  true  "Command ID"
+// @Success 200 {object} string
+// @Failure 500 {object} string
+// @Router /command/{id} [get]
 func (h *Handler) GetCommandById(c *gin.Context) {
 	id := c.Param("id")
 	res, err := h.Service.GetCommandById(c.Request.Context(), id)
